<resources>

    <string name="app_name">TattooMe</string>


    //Ads ID's
    <string name="App_ID" translatable="false">ca-app-pub-5972202469838280~3300480902</string>
    <string name="App_Open_Ad" translatable="false">ca-app-pub-5972202469838280/5025901208</string>
    <string name="App_Open_Ad_hf" translatable="false">ca-app-pub-5972202469838280/3501351956</string>
    <string name="rewardedVideo" translatable="false">ca-app-pub-5972202469838280/8602983244</string>
    <string name="Banner_ID_HF" translatable="false">ca-app-pub-5972202469838280/8447907944</string>
    <string name="Banner_ID" translatable="false">ca-app-pub-5972202469838280/9760989612</string>
    //After Home Ads
    <string name="inter_af_home" translatable="false">ca-app-pub-5972202469838280/3030578664</string>
    <string name="inter_af_home_hf" translatable="false">ca-app-pub-5972202469838280/2074071281</string>
    //Before Home Ads
    <string name="inter_bf_home" translatable="false">ca-app-pub-5972202469838280/6295036256</string>
    <string name="inter_bf_home_hf" translatable="false">ca-app-pub-5972202469838280/7907500825</string>
    //Home Ads
    <string name="inter_home" translatable="false">ca-app-pub-5972202469838280/7061871756</string>
    <string name="inter_home_hf" translatable="false">ca-app-pub-5972202469838280/5658093075</string>

    //InApp Purchase Token
    <string name="licenseKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAiHR/gTPhwfRkyVLehBEYUfA1qENY105e5MvuCmSagGKKOOfvjLaDILkIBHwwH3ZQ3Gb5fG4+3WV/FHYdtqPqwVXbV97OKKeYG6/hwVX3PKviD5mDUcIzhMr9ZTaq0PUtGYR5BoHHLfG9Ak1B0nnghaMRZb17oEn93sC5XivBZ+FxdsRhEoiSq71NMhmY7XaSyBKTGKBavR3UNrYMPA3Sp+k5d71V6PUFUAWIzl5EQfcknL1GeOFvd8SokElEDjEnpFdUqwe4Te/m7awAnDgVW7jt+e251jTBd6k1W33oDzED6TAyDVpixgIS6PCtDOSpWgqRX1QXr9osoW2nB3rQywIDAQAB</string>


    <string name="title_home">Home</string>
    <string name="title_aicreate">Create</string>
    <string name="title_aitools">Ai Tools</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="load_default">Stickers</string>
    <string name="pick_sticker">Sticker 2</string>
    <string name="save">Save</string>
    <string name="opacity">Opacity</string>
    <string name="ai_tattoo">Ai Tattoo</string>
    <string name="ai_camera">Ai Camera</string>
    <string name="surprise_me">Surprise Me</string>
    <string name="enter_prompt">Enter Prompt</string>
    <string name="type_your_tattoo">Describe your tattoo idea…</string>
    <string name="select_style">Style</string>
    <string name="create">Generate Tattoo</string>
    <string name="see_all">See All</string>
    <string name="clear">Clear</string>
    <string name="setting">Settings</string>
    <string name="ai_try">Ai try</string>
    <string name="history">History</string>
    <string name="_02_images">02  images</string>
    <string name="_4_5">4:5</string>
    <string name="_01_image">01  image</string>
    <string name="_03_images">03  images</string>
    <string name="_04_images">04  images</string>
    <string name="_1_1">1:1</string>
    <string name="_4_3">4:3</string>
    <string name="everyday_you_have">Everyday You Have 3 Free Generations</string>
    <string name="generating">Generating</string>
    <string name="it_may_take_up_to">It may take up to a minute for you to receive an AI-generated Art</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="free_limit_reached">Free Limit Reached</string>
    <string name="upgrade_now_or_try_again_tomorrow">Upgrade now or try again tomorrow.</string>
    <string name="last_free_try">Last Free Try!</string>
    <string name="you_ve_used_2_of_3">You’ve used 2 of 3 free attempts.\nUpgrade to Pro for unlimited generations.</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="use_last_free_try">Use last Free Try</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="your_tattoo_has_been_added_to_your_gallery">Your tattoo has been added to your gallery.</string>
    <string name="not_now">Not Now</string>
    <string name="discard">Discard</string>
    <string name="discard_results">Discard Results?</string>
    <string name="any_unsaved_changes_will">Any unsaved changes will be lost.\nAre you sure you want to proceed?</string>
    <string name="generating_images">Generating images…</string>
    <string name="delete_image">Delete Image?</string>
    <string name="are_you_sure_you_want_to_delete_this_generation">Are you sure you want to delete this\ngeneration.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="style">Styles</string>
    <string name="done">Done</string>
    <string name="result_image">Result Image</string>
    <string name="regenerate">Regenerate</string>
    <string name="try_on">Try On</string>
    <string name="result_screen">Result Screen</string>
    <string name="library">Library</string>
    <string name="got_it">Got it</string>
    <string name="preview_info">Preview Info</string>
    <string name="library_tattoos">Library Tattoos</string>
    <string name="history_tattoos">History Tattoos</string>
    <string name="general">General</string>
    <string name="unlock_all_premium_features">Unlock All Premium Features</string>
    <string name="continiue">Continue</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="exit">Exit ?</string>
    <string name="are_you_sure">Are you sure, you want to exit?</string>
    <string name="yes">Yes</string>
</resources>