<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_aicreate">

    <fragment
        android:id="@+id/navigation_aicamera"
        android:name="com.basit.aitattoomaker.presentation.camera.CameraScreen"
        android:label="@string/title_aicreate"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_aicamera_to_navigation_aitools"
            app:destination="@id/navigation_aitools" />
    </fragment>
    <fragment
        android:id="@+id/navigation_aicreate"
        android:name="com.basit.aitattoomaker.presentation.ai_create.AiCreateFragment"
        android:label="@string/title_aicreate"
        tools:layout="@layout/fragment_ai_create" >
        <action
            android:id="@+id/action_navigation_aicreate_to_navigation_aitools"
            app:destination="@id/navigation_aitools" />
        <action
            android:id="@+id/action_navigation_aicreate_to_result_screen"
            app:destination="@id/result_screen" />
    </fragment>
    <fragment
        android:id="@+id/result_screen"
        android:name="com.basit.aitattoomaker.presentation.result.ResultFragment"
        android:label="@string/result_screen"
        tools:layout="@layout/fragment_result" >
    </fragment>
    <fragment
        android:id="@+id/navigation_aitools"
        android:name="com.basit.aitattoomaker.presentation.ai_tools.AiToolsFragment"
        android:label="@string/title_aitools"
        tools:layout="@layout/fragment_aitools" >
        <action
            android:id="@+id/action_navigation_aitools_to_navigation_save"
            app:destination="@id/navigation_save" />
    </fragment>
    <fragment
        android:id="@+id/navigation_save"
        android:name="com.basit.aitattoomaker.presentation.ai_tools.SaveFragment"
        android:label="@string/save"
        tools:layout="@layout/fragment_save" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.basit.aitattoomaker.presentation.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.basit.aitattoomaker.presentation.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" />
</navigation>