<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fullscreenRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/everyday_you_have"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular_400"
        android:layout_marginBottom="@dimen/_50sdp"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@+id/fullscreenWebPView"/>

    <ImageView
        android:id="@+id/fullscreenWebPView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/title_aicreate" />
    <TextView
        android:id="@+id/gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorprimary"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="true"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@+id/fullscreenWebPView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/it_may_take_up_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/lightGrey"
        android:fontFamily="@font/poppins_regular_400"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@+id/gen"/>
</androidx.constraintlayout.widget.ConstraintLayout>
