<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fullscreenRoot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round"
    android:paddingHorizontal="@dimen/_10sdp"
    android:backgroundTint="@color/darkGrey">

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semibold_600"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/_15ssp"/>
    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_this_generation"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/lightGrey"
        android:fontFamily="@font/poppins_regular_400"
        android:textAllCaps="false"
        android:gravity="center"
        android:ellipsize="end"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/headline"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.45"
        android:paddingVertical="@dimen/_6sdp"
        android:gravity="center"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/grey"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        android:textColor="@color/lightGrey"
        android:fontFamily="@font/poppins_medium_500"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textAllCaps="false"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/delete"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.45"
        android:paddingVertical="@dimen/_6sdp"
        android:gravity="center"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/colorprimary"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium_500"
        android:textAllCaps="false"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="@+id/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>
