<!-- res/layout/popup_custom_layout.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_background"
    android:backgroundTint="@color/grey"
    android:paddingVertical="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:elevation="@dimen/_1sdp">

<!--     Custom items for the popup window -->


    <TextView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/_01_image"
        android:textColor="@color/lightGrey"
        android:drawablePadding="@dimen/_25sdp"
        android:fontFamily="@font/poppins_regular_400"
        android:textSize="@dimen/_11ssp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/image2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/_02_images"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/lightGrey"
        android:fontFamily="@font/poppins_regular_400"
        android:textSize="@dimen/_11ssp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@+id/image1"
        app:layout_constraintStart_toStartOf="@+id/image1"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        />

    <TextView
        android:id="@+id/image3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/_03_images"
        android:layout_marginTop="@dimen/_1sdp"
        android:textColor="@color/lightGrey"
        android:fontFamily="@font/poppins_regular_400"
        android:textSize="@dimen/_11ssp"
        android:visibility="gone"
        android:background="?android:attr/selectableItemBackground"
        app:drawableEndCompat="@drawable/pro_svg"
        app:drawableTint="#00000000"
        app:layout_constraintEnd_toEndOf="@+id/image1"
        app:layout_constraintStart_toStartOf="@+id/image1"
        app:layout_constraintTop_toBottomOf="@+id/image2" />

    <TextView
        android:id="@+id/image4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/_04_images"
        android:textColor="@color/lightGrey"
        android:layout_marginTop="@dimen/_1sdp"
        android:fontFamily="@font/poppins_regular_400"
        android:textSize="@dimen/_11ssp"
        android:visibility="gone"
        android:background="?android:attr/selectableItemBackground"
        app:drawableEndCompat="@drawable/pro_svg"
        app:drawableTint="#00000000"
        app:layout_constraintEnd_toEndOf="@+id/image3"
        app:layout_constraintStart_toStartOf="@+id/image3"
        app:layout_constraintTop_toBottomOf="@+id/image3" />


</androidx.constraintlayout.widget.ConstraintLayout>
