<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:backgroundTint="@color/darkGrey"
    android:background="@drawable/bg_round">
    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular_400"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/style"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/colorprimary"
        android:fontFamily="@font/poppins_medium_500"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/rv_style"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        android:layout_marginTop="@dimen/_20sdp"
        tools:listitem="@layout/item_tattoo"
        android:paddingBottom="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

</androidx.constraintlayout.widget.ConstraintLayout>