<!-- res/layout/popup_custom_layout.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_background"
    android:elevation="@dimen/_1sdp"
    android:padding="8dp">

<!--     Custom items for the popup window -->


    <TextView
        android:id="@+id/square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/_1_1"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/black"
        android:drawablePadding="@dimen/_38sdp"
        android:fontFamily="@font/poppins_regular_400"
        android:textSize="@dimen/_11ssp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/pro_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/portrait"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/_4_5"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular_400"
        android:drawablePadding="@dimen/_25sdp"
        android:textSize="@dimen/_11ssp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:drawableStartCompat="@drawable/pro_svg"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintStart_toStartOf="@+id/square"
        app:layout_constraintTop_toBottomOf="@+id/square"
        />

    <TextView
        android:id="@+id/landscape"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/_4_3"
        android:layout_marginTop="@dimen/_1sdp"
        android:textColor="@color/lightGrey"
        android:drawablePadding="@dimen/_25sdp"
        android:fontFamily="@font/poppins_regular_400"
        android:textSize="@dimen/_11ssp"
        android:background="?android:attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/pro_svg"
        app:layout_constraintEnd_toEndOf="@+id/square"
        app:layout_constraintStart_toStartOf="@+id/square"
        app:layout_constraintTop_toBottomOf="@+id/portrait" />



</androidx.constraintlayout.widget.ConstraintLayout>
