<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fullscreenRoot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round"
    android:backgroundTint="@color/darkGrey">
    <ImageView
        android:id="@+id/timerBG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/free_limit_reached"
        app:layout_constraintTop_toBottomOf="@+id/cross"
        android:contentDescription="@string/title_aicreate" />
    <ImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/cross_svg"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/title_aicreate" />
    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_limit_reached"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@+id/timerBG"
        android:textSize="@dimen/_15ssp"/>
    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_now_or_try_again_tomorrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/lightGrey"
        android:fontFamily="@font/poppins_regular_400"
        android:paddingHorizontal="@dimen/_30sdp"
        android:textAllCaps="false"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintTop_toBottomOf="@+id/headline"/>
    <TextView
        android:id="@+id/timer"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:paddingVertical="@dimen/_6sdp"
        android:gravity="center"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/grey"
        android:layout_height="wrap_content"
        android:text="08:05:32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/lightGrey"
        android:fontFamily="@font/poppins_medium_500"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textAllCaps="false"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@+id/upgrade"/>
    <TextView
        android:id="@+id/upgrade"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:paddingVertical="@dimen/_6sdp"
        android:gravity="center"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/colorprimary"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_to_pro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium_500"
        android:textAllCaps="false"
        android:textSize="@dimen/_13ssp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
